# OpenXrSDK

./: .gitattributes  .gitignore  .gitmodules  AndroidProfile.md  ToDo.docx  mono-profile.txt
src/: AspNetCoreMini.props  Directory.Build.props  OpenXrSDK.sln  XrSDK.sln  XrSDK.slnx  XrSDK.vsext
src/AspNetCore.Tiny/: IHostedService.cs
src/Engine/Draco.Native/Android/draco-native/src/: CMakeLists.txt
src/Oculus.OVRPlugin/: OVRPlugin.cs  Oculus.OVRPlugin.csproj
src/Oculus.Platform/: Message.cs
src/Oculus.XrPlugin/: Oculus.XrPlugin.csproj  OculusXrPlugin.cs
src/OpenXr.Engine.Core/: Behavoir.cs  Camera.cs  Group.cs  Light.cs  Mesh.cs  OpenXr.Engine.Core.csproj  Scene.cs
src/OpenXr.Framework/: BaseXrPlugin.cs  CurrentXrThread.cs  DispatcherXrThread.cs  IXrGraphicDriver.cs  IXrPlugin.cs  OpenXr.Framework.csproj  OpenXrException.cs  SyncEvent.cs  XrApp.cs  XrLayerManager.cs
src/OpenXr.Framework.Android/: AndroidXrPlugin.cs
src/OpenXr.Framework.Oculus/: OculusXrPlugin.cs  OpenXr.Framework.Oculus.csproj  SpaceTriangleMesh.cs  XrExtensions.cs
src/OpenXr.Framework.OpenGL/: OpenGLDevice.cs  OpenXr.Framework.OpenGL.csproj  XrOpenGLGraphicDriver.cs
src/OpenXr.Framework.Vulkan/: VulkanDevice.cs  VulkanGraphicDriver.cs
src/OpenXr.Test.Android/: AndroidManifest.xml  GlobalServices.cs  HandlerXrThread.cs  MainActivity.cs  OpenVrPlugin.cs  OpenXr.Test.Android.csproj  VrActivity.cs  WebServer.cs  WebServerService.cs
src/OpenXr.Test.Console/: OpenXr.Test.Console.csproj  Program.cs  Tasks.cs  WebLinkHandler.cs
tools/: example.astc  filament-combine-libs-android.cmd
(+2335 files in other folders)
